@@ -2,6 +2,7 @@
 Changes in JMurmel-1.4.1 relative to JMurmel-1.4
 
  * fixed sxhash to return nonnegative integer values
+ * fixed using macroexpand-1 & gensym in compiled code
 
  * added the function "string"
 
